[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/world/base_minigame_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu/textures/base.png" type="Texture" id=2]
[ext_resource path="res://src/world/latto_latto.gd" type="Script" id=3]
[ext_resource path="res://assets/latto.png" type="Texture" id=4]
[ext_resource path="res://src/menu/textures/space.png" type="Texture" id=5]
[ext_resource path="res://assets/npc/Jojo.png" type="Texture" id=6]
[ext_resource path="res://fonts/DisposableDroidBB_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://audio/latto_latto.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Bg.png" type="Texture" id=9]

[sub_resource type="Animation" id=17]
resource_name = "foul"
tracks/0/type = "value"
tracks/0/path = NodePath("../sticky_layer/hud/base/progress:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.568627, 0.568627, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 15.0, 20.0 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "lose"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "LOSER!
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1e-05, 1e-05, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 10.0, 20.0 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../sticky_layer/black:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9, 2.9, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Ready?
", "3
", "2
", "1
", "GO!
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.9, 2, 2.9, 3, 3.9, 4, 4.8 ),
"transitions": PoolRealArray( 1, 1e-05, 1, 1e-05, 1, 1e-05, 1, 1e-05, 1, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..:start()")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 10.0, 20.0 ],
"method": "shake"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../timeout")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 30 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "win"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "WIN!
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "foul"
tracks/0/type = "value"
tracks/0/path = NodePath("../sticky_layer/hud/base/progress:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.568627, 0.568627, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 15.0, 20.0 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "lose"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "LOSER!
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1e-05, 1e-05, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 10.0, 20.0 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../sticky_layer/black:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9, 2.9, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Ready?
", "3
", "2
", "1
", "GO!
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.9, 2, 2.9, 3, 3.9, 4, 4.8 ),
"transitions": PoolRealArray( 1, 1e-05, 1, 1e-05, 1, 1e-05, 1, 1e-05, 1, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..:start()")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 10.0, 20.0 ],
"method": "shake"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../timeout")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 30 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=23]
resource_name = "win"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "WIN!
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.415686, 0.415686, 0.415686, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.968627, 1, 0.0509804, 1 )

[sub_resource type="Theme" id=3]
ProgressBar/styles/bg = SubResource( 1 )
ProgressBar/styles/fg = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.415686, 0.415686, 0.415686, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.372549, 1, 0.14902, 1 )

[sub_resource type="Theme" id=13]
ProgressBar/styles/bg = SubResource( 11 )
ProgressBar/styles/fg = SubResource( 12 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.372549, 1, 0.14902, 1 )

[sub_resource type="Theme" id=16]
ProgressBar/styles/bg = SubResource( 14 )
ProgressBar/styles/fg = SubResource( 15 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/DisposableDroidBB_bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 64
extra_spacing_top = -8
extra_spacing_bottom = -8
font_data = SubResource( 4 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 5 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("latto:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("latto2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("space:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("space:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("latto2/CPUParticles2D2:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("latto/CPUParticles2D:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("jojo/Label:text")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "", "" ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("audio:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=25]
resource_name = "play"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("latto:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.45, 2, 1 ),
"update": 0,
"values": [ 0.0, 84.7, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("latto2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.45, 2, 1 ),
"update": 0,
"values": [ 0.0, -84.7, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("space:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("space:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("latto2/CPUParticles2D2:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("latto/CPUParticles2D:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("jojo/Label:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 5.0, 20.0 ],
"method": "shake"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("audio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "play_combo"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("latto:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.45, 1.45, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("latto2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.450625, 1.452, 1 ),
"update": 0,
"values": [ 0.0, -180.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("space:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1.1, 1.1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("space:modulate")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.337255, 1, 0, 1 ), Color( 0.286275, 0, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("latto/CPUParticles2D:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.592157, 0, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.803922, 1, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("latto2/CPUParticles2D2:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.592157, 0, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.686275, 1, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("jojo/Label:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Nice!" ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 5.0, 20.0 ],
"method": "shake"
}, {
"args": [ 5.0, 20.0 ],
"method": "shake"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("audio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Latto_latto" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="0"]
z_index = -2
texture = ExtResource( 9 )
offset = Vector2( 240, 135 )

[node name="animation" type="AnimationPlayer" parent="." index="1"]
root_node = NodePath("../counter")
anims/foul = SubResource( 17 )
anims/lose = SubResource( 9 )
anims/open = SubResource( 10 )
anims/start = SubResource( 7 )
anims/win = SubResource( 8 )

[node name="animation2" type="AnimationPlayer" parent="." index="2"]
root_node = NodePath("../counter")
anims/foul = SubResource( 19 )
anims/lose = SubResource( 20 )
anims/open = SubResource( 21 )
anims/start = SubResource( 22 )
anims/win = SubResource( 23 )

[node name="hud" type="Control" parent="sticky_layer" index="0"]
margin_right = 40.0
margin_bottom = 40.0

[node name="base" type="NinePatchRect" parent="sticky_layer/hud" index="0"]
margin_left = 16.0
margin_top = 206.0
margin_right = 464.0
margin_bottom = 254.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="progress" type="ProgressBar" parent="sticky_layer/hud/base" index="0"]
self_modulate = Color( 1, 0.568627, 0.568627, 1 )
margin_left = 10.0
margin_top = 26.0
margin_right = 438.0
margin_bottom = 38.0
theme = SubResource( 3 )
percent_visible = false

[node name="indicator2" type="ColorRect" parent="sticky_layer/hud/base" index="1"]
margin_left = 223.0
margin_top = 24.0
margin_right = 225.0
margin_bottom = 40.0
color = Color( 0.858824, 0.533333, 0.109804, 1 )

[node name="indicator3" type="ColorRect" parent="sticky_layer/hud/base" index="2"]
margin_left = 266.0
margin_top = 24.0
margin_right = 268.0
margin_bottom = 40.0
color = Color( 0.878431, 0.866667, 0.0784314, 1 )

[node name="indicator4" type="ColorRect" parent="sticky_layer/hud/base" index="3"]
margin_left = 341.0
margin_top = 24.0
margin_right = 343.0
margin_bottom = 40.0
color = Color( 0.254902, 0.878431, 0.0784314, 1 )

[node name="accuracy" type="ProgressBar" parent="sticky_layer/hud/base" index="4"]
margin_left = 10.0
margin_top = 10.0
margin_right = 438.0
margin_bottom = 22.0
theme = SubResource( 13 )
percent_visible = false

[node name="indicator" type="ColorRect" parent="sticky_layer/hud/base/accuracy" index="0"]
margin_top = -2.0
margin_right = 2.0
margin_bottom = 14.0

[node name="accuracy2" type="ProgressBar" parent="sticky_layer/hud/base" index="5"]
margin_left = 10.0
margin_top = 10.0
margin_right = 438.0
margin_bottom = 22.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 214, 6 )
theme = SubResource( 16 )
percent_visible = false

[node name="black" type="ColorRect" parent="sticky_layer" index="2"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )

[node name="counter" type="Label" parent="." index="6"]
self_modulate = Color( 1, 1, 1, 0.555555 )
margin_right = 480.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 240, 100 )
theme = SubResource( 18 )
text = "2
"
align = 1
valign = 1

[node name="timeout" type="Timer" parent="." index="7"]

[node name="time_label" type="Label" parent="." index="8"]
margin_left = 4.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 19.0
text = "0:59"

[node name="latto" type="Node2D" parent="." index="9"]
z_index = -1

[node name="jojo" type="Sprite" parent="latto" index="0"]
position = Vector2( 381, 139 )
scale = Vector2( 3.03906, 3.01563 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="latto/jojo" index="0"]
margin_left = -27.3874
margin_top = -45.2613
margin_right = 25.6126
margin_bottom = -26.2613
custom_fonts/font = ExtResource( 7 )
align = 1

[node name="space" type="Sprite" parent="latto" index="1"]
position = Vector2( 240, 179 )
texture = ExtResource( 5 )

[node name="latto" type="Sprite" parent="latto" index="2"]
position = Vector2( 90, 101 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( -28, 152 )

[node name="tali" type="Sprite" parent="latto/latto" index="0"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1.40369e-05, 6.00001 )
rotation = -1.40442
scale = Vector2( 2.91183, 0.067906 )
texture = ExtResource( 4 )
offset = Vector2( -24.2768, -8.14795 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="latto/latto" index="1"]
position = Vector2( -28, 154 )
z_index = -1
amount = 100
preprocess = 100.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.31
angular_velocity = 23.0
tangential_accel = 21.5
scale_amount = 6.0
scale_amount_random = 1.0

[node name="latto2" type="Sprite" parent="latto" index="3"]
position = Vector2( 90, 101 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 22, 154 )

[node name="tali2" type="Sprite" parent="latto/latto2" index="0"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -2.98023e-08, 2.00002 )
rotation = -1.70094
scale = Vector2( 2.91183, 0.067906 )
texture = ExtResource( 4 )
offset = Vector2( -26.3254, 0.769775 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="latto/latto2" index="1"]
position = Vector2( 24, 156 )
z_index = -1
amount = 100
preprocess = 100.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.31
angular_velocity = 23.0
tangential_accel = 21.5
scale_amount = 6.0
scale_amount_random = 1.0

[node name="anim" type="AnimationPlayer" parent="latto" index="4"]
anims/RESET = SubResource( 24 )
anims/play = SubResource( 25 )
anims/play_combo = SubResource( 26 )

[node name="audio" type="AudioStreamPlayer" parent="latto" index="5"]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
[connection signal="animation_finished" from="animation2" to="." method="_on_animation_animation_finished"]
[connection signal="timeout" from="timeout" to="." method="_on_timeout_timeout"]
